# bbcp

./: .gitignore  Makefile  meson.build
src/: Makefile  bbcp.cpp  bbcp_Args.cpp  bbcp_BuffPool.C  bbcp_BuffPool.cpp  bbcp_BuffPool.h  bbcp_Config.C  bbcp_Config.cpp  bbcp_FS_Pipe.cpp  bbcp_File.cpp  bbcp_FileSpec.cpp  bbcp_Headers.h  bbcp_IO.h  bbcp_Link.cpp  bbcp_NetAddr.cpp  bbcp_NetAddrInfo.cpp  bbcp_Network.cpp  bbcp_Platform.h  bbcp_Protocol.cpp  bbcp_Pthread.h  bbcp_Stream.cpp  bbcp_Stream.h  bbcp_Version.cpp
